# template

./: .clang-format  .gitignore  CMakeLists.txt
app/: CMakeLists.txt
include/type/: type.hpp
src/: lib.cpp
test/: CMakeLists.txt
